# minineedle

./: .coverage  .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/: release.yml
.github/workflows/: bumpversion.yml  publish.yml  python-app.yml  release.yml  tests.yml
minineedle/: __init__.py  core.py  gap.py  needle.py  smith.py  typesvars.py
requirements/: testing.txt
tests/: test_base.py  tests.py
